Possible fix for horizontal scroll in Safari

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -1,10 +1,15 @@
 // base styles
 html {
+    @include boxReset;
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    width: 100%;
+    border: 1px solid greenyellow;
 }
 body {
-    max-width: 100%;
-    background: white;
+    width: 100%;
+    overflow-x: hidden;
+    border: 1px solid red;
     @include boxReset;
 }
 
@@ -19,18 +24,14 @@ img {
     display: block;
 }
 .overflowContainer {
-    max-width: fit-content;
-    overflow: hidden;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 .wrapper {
     @include boxReset;
-    max-width: 900px;
+    max-width: 1100px;
     width: 90%;
     margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
 }
 
 a {
@@ -55,6 +56,13 @@ section {
     @include boxReset;
     padding: 10rem 0;
     overflow: hidden;
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap;
+    }
 }
 
 button {
