--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -8,6 +8,7 @@ footer {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
+        align-items: center;
     }
 
 
