--- a/styles/sass/partials/_typography.scss
+++ b/styles/sass/partials/_typography.scss
@@ -26,7 +26,8 @@ h2 {
     text-align: center;
     font-size: $heading2Size;
     @include boxReset;
-    margin-bottom: 50px;
+    margin: 0 auto 50px auto;
+    width: 100%;
 }
 
 h3 {
@@ -176,6 +177,7 @@ header {
     }
     .profileInstructions {
         padding: 0 15px;
+        max-width: 80rem;
     }
     .profileListItem i {
         font-size: 5.0rem;
